fixing visibility of scroll-to-top text on xl

--- a/app/assets/tailwind/marketing.css
+++ b/app/assets/tailwind/marketing.css
@@ -84,7 +84,7 @@
 /* Back to top text */
 .scroll-top-text {
   /* Display & visibility */
-  @apply landscape:hidden;
+  @apply landscape:hidden landscape:lg:inline;
 
   /* Typography */
   @apply text-xs text-neutral-600 tracking-wide;
